# world-cup-2026

./: .gitignore  AGENTS.md  README.md  pyproject.toml  run_pipeline.py
data/raw/: wc2026_fixtures.csv  wc2026_groups.csv  wc2026_results_manual.csv
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  DATA_SOURCES.md  REPORT.md
notebooks/: 01_data_exploration.ipynb  02_model_analysis.ipynb  03_tournament_simulation.ipynb  04_power_rankings.ipynb  05_live_validation.ipynb
paper/: generate_figures.py  generate_paper.py  wc2026_paper.tex
scripts/: backtest_wc2022.py  generate_accuracy_social.py  generate_group_stage_png.py  generate_r32_png.py  generate_social_group_stage.py  generate_video.py
src/: config.py  helpers.py
src/features/: build_2026_features.py  build_features.py  elo.py
src/models/: ensemble.py  evaluate.py  live_validation.py  prediction.py  train.py
src/scraping/: download_kaggle.py  scrape_fifa_rankings.py  scrape_historical_world_cups.py  scrape_live_results.py  scrape_odds.py  scrape_squad_quality.py  scrape_world_cup_2026.py
src/simulation/: group_stage.py  knockout_stage.py  simulator.py
src/visualization/: insights.py  plots.py  tables.py
tests/: conftest.py  test_elo.py  test_features.py  test_models.py  test_simulation.py
