[project]
name = "worldcup-2026-predictor"
version = "0.1.0"
description = "ML pipeline to predict FIFA World Cup 2026 outcomes"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.2",
    "numpy>=2.0",
    "scikit-learn>=1.5",
    "xgboost>=2.1",
    "torch>=2.4",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "jupyter>=1.0",
    "optuna>=4.0",
    "kaggle>=1.6",
    "requests>=2.32",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "tqdm>=4.66",
    "pyarrow>=17.0",
    "joblib>=1.4",
    "lightgbm>=4.6.0",
    "fpdf2>=2.8.7",
    "pillow>=12.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.8"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "ruff>=0.15.17",
]
